--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>六号盒子</title>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}"/>
 </head>
-<body>
+<body class="background_body">
+<script type="module" src="{{url_for('static', filename='js/sixbox/home.js')}}"></script>
 </body>
 </html>
