--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -1,12 +1,3 @@
-<!DOCTYPE html>
-<html lang="ch">
-<head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>六号盒子</title>
-    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}"/>
-</head>
-<body class="background_body">
-<script type="module" src="{{url_for('static', filename='js/sixbox/home.js')}}"></script>
-</body>
-</html>
+{% extends 'common/web_base.html' %}
+{% block body_content %}
+{% endblock %}
