--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -1,4 +1,4 @@
-@font-face {
+@font-face{
     font-family: 'poppins';
     src: url('/sources/fonts/poppins/Poppins-Regular.ttf') format('turetype'),
         url('/sources/fonts/poppins/Poppins-Bold.ttf') format('turetype');
@@ -7,10 +7,10 @@
 }
 
 /*----默认主题----*/
-:root {
+:root{
 }
 
-.background_body {
+.background_body{
     height: 100vh;
     background-size: cover;
     background-position: center;
@@ -21,132 +21,60 @@
     font-family: 'poppins','Helvetica', 'Arial', sans-serif;
 }
 
-.side_bar_container {
-    max-width: 347px;
-    min-width: 254px;
-    width: 25%;
+.side_bar_container{
     height: 100%;
+    width: 234px;
+    background-color: white;
+    border-right: 2px solid black;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
     display: grid;
-    grid-template-rows: 150px 1fr;
-    background-color: rgba(255,255,255,0.5);
-    box-sizing: border-box;
-    border-right: 2px solid #A098AE;
-    justify-content: center;
+    grid-template-rows: 96px 1fr;
 }
-
-.side_bar_logo {
+.side_bar_logo{
+    background-color: black;
+}
+.side_bar_list{
     width: 100%;
-    height: 150px;
-    display: flex;
-}
-.side_bar_logo > img {
-    max-width: 252px;
-    max-height: 68px;
-    margin: auto;
-}
-.side_bar_list {
-    flex-grow: 1;
-    width: 100%;
-    padding-bottom: 50px;
+    height: 100%;
+    background-color: yellow;
     margin-inline-start: 0px;
-    overflow-y: auto;
-}
-.side_bar_list::-webkit-scrollbar{
-    width: 1px;
-}
-.side_bar_list>dl{
-    width: 100%;
-    height: 72px;
-}
-.side_bar_list_item {
-    width: 252px;
-    height: 72px;
     display: flex;
-    align-items: center;
-    box-sizing: border-box;
-    margin: auto;
+    flex-direction: column;
+    margin-bottom: 18px;
+}
+.side_bar_row{
+    height: 54px;
+    width: 100%;
+    background-color: gray;
+    margin-block-start: 3px;
+    margin-block-end: 3px;
+}
+.side_bar_item{
+    height: 100%;
+    width: 100%;
+    background-color: green;
+    display: flex;
 }
 .side_bar_icon{
     width: 40px;
-    height: 40px;
-    margin-left: 24px;
-    margin-right: 12px;
+    height: 100%;
+    background-color: blue;
+    margin-left: 18px;
+    margin-right: 18px;
 }
-.side_bar_icon>svg>path{
-    fill: #A098AE;
-}
-
-.side_bar_list_item > a{
-    width: 100%;
-    margin-left: 12px;
-    margin-right: 24px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    color: #A098AE;
-    font-size: 18px;
-}
-
-.file_sys_container {
+.side_bar_text{
+    height: 100%;
     flex-grow: 1;
+    background-color: red;
+}
+
+.file_sys_container{
     height: 100%;
-    background-color: rgba(255,255,255,0.5);
-    box-sizing: border-box;
-    display:grid;
-    grid-template-rows: 150px 1fr;
-    padding-left: 50px;
-    padding-right: 50px;
-    align-items: center;
-}
-.file_sys_header{
-    width: 100%;
-    height: 100px;
-    display: flex;
-}
-.file_sys_header_title {
     flex-grow: 1;
-    display:flex;
-    align-items: center;
-}
-.file_sys_header_title>a {
-    font-size: 36px;
-    font-weight: bold;
-    color: #363B64;
-}
-.file_sys_header_icon{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 20px;
-}
-.file_sys_header_icon>img{
-    width: 60px;
-    height: 60px;
-}
-.file_sys_content{
-    height: 100%;
-    overflow-y: auto;
-    display: flex;
-}
-.file_menu_bar{
-    width: 393px;
-    height: 100%;
-    background-color: #FCFCFC;
-    border-radius: 20px;
-}
-.file_panel{
-    flex-grow: 1;
-    height: 100%;
-}
-
-@media (max-width: 767px){
-}
-
-@media (min-width: 768px) and (max-width: 969px){
-}
-
-@media (min-width: 970px) and (max-width: 1169px){
-}
-
-@media (min-width: 1170px){
+    background-color: green;
+    display: grid;
+    grid-template-rows: 96px 1fr;
 }
