--- a/sources/templates/common/side_bar.html
+++ b/sources/templates/common/side_bar.html
@@ -1,17 +1,15 @@
 <div class="side_bar_container">
     <div class="side_bar_logo">
-        <img src="/sources?filename=icons/logo.png">
     </div>
     <dd class="side_bar_list">
-        {% for side_bar_item in side_bar_items %}
-        <dl>
-            <div class="side_bar_list_item">
+        <dl class="side_bar_row">
+            <div class="side_bar_item">
                 <div class="side_bar_icon">
-                    {{side_bar_item.icon|safe}}
                 </div>
-                <a>{{side_bar_item.title}}</a>
+                <a class="side_bar_text">文件管理器</a>
             </div>
         </dl>
-        {% endfor %}
+        <dl class="side_bar_row">
+        </dl>
     </dd>
 </div>
