--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -1,2 +1,31 @@
 <div class="file_sys_container">
+    <div class="file_sys_header">
+        <a class="file_sys_header_title">文件管理器</a>
+        <div class="file_sys_header_icon">
+            <img src="/sources?filename=icons/notification.png">
+        </div>
+        <div class="file_sys_header_icon">
+            <img src="/sources?filename=icons/setting.png">
+        </div>
+        <div class="file_sys_header_icon">
+            <img src="/sources?filename=icons/user.png">
+        </div>
+    </div>
+    <div class="file_sys_body">
+        <div class="file_sys_menu">
+            <button class="file_sys_menu_button">+下载</button>
+            <div class="file_sys_menu_label">
+                <span>菜单</span>
+            </div>
+            <div class="file_sys_menu_item">
+                <div class="file_sys_menu_icon">
+                    <img src="/sources?filename=icons/all_file.png">
+                </div>
+            </div>
+        </div>
+        <div class="file_sys_panel">
+            <div class="file_sys_search_bar"></div>
+            <div class="file_sys_list_body"></div>
+        </div>
+    </div>
 </div>
