--- a/sources/static/css/styles.css
+++ b/sources/static/css/styles.css
@@ -18,63 +18,187 @@
     transition: background-image 1s ease-in-out;
     margin: 0px;
     display: flex;
-    font-family: 'poppins','Helvetica', 'Arial', sans-serif;
+    font-family: 'poppins';
+    background-color: #C5EBE2;
 }
 
 .side_bar_container{
     height: 100%;
-    width: 234px;
-    background-color: white;
+    width: 266px;
     border-right: 2px solid black;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-bottom: 20px;
+    padding-left: 36px;
+    padding-right: 36px;
     box-sizing: border-box;
     display: grid;
     grid-template-rows: 96px 1fr;
 }
 .side_bar_logo{
-    background-color: black;
+    min-width: 192px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.side_bar_logo_img{
+    width: 100%;
 }
 .side_bar_list{
+    min-width: 192px;
     width: 100%;
     height: 100%;
-    background-color: yellow;
     margin-inline-start: 0px;
     display: flex;
     flex-direction: column;
     margin-bottom: 18px;
+    padding-top: 18px;
+    box-sizing: border-box;
 }
 .side_bar_row{
     height: 54px;
     width: 100%;
-    background-color: gray;
     margin-block-start: 3px;
     margin-block-end: 3px;
 }
 .side_bar_item{
     height: 100%;
     width: 100%;
-    background-color: green;
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .side_bar_icon{
     width: 40px;
-    height: 100%;
-    background-color: blue;
     margin-left: 18px;
     margin-right: 18px;
 }
+.side_bar_icon>svg>path{
+    fill: #A098AE;
+}
+
 .side_bar_text{
-    height: 100%;
     flex-grow: 1;
-    background-color: red;
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    color: #A098AE;
+    font-size: 18px;
 }
 
 .file_sys_container{
     height: 100%;
     flex-grow: 1;
-    background-color: green;
     display: grid;
     grid-template-rows: 96px 1fr;
+}
+.file_sys_header{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    margin-right: 18px;
+}
+.file_sys_header_title{
+    flex-grow: 1;
+    font-size: 36px;
+    font-weight: bold;
+    color: #363B64;
+    padding-left: 36px;
+}
+.file_sys_header_icon{
+    height: 60px;
+    width: 60px;
+    margin-right: 18px;
+}
+.file_sys_header_icon>img{
+    height: 60px;
+    width: 60px;
+}
+.file_sys_body{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 306px 1fr;
+    grid-column-gap: 36px;
+    padding-left: 36px;
+    padding-right: 36px;
+    box-sizing: border-box;
+    padding-top: 18px;
+}
+.file_sys_menu{
+    width: 100%;
+    background-color: white;
+    border-radius: 20px;
+    box-sizing: border-box;
+    margin-bottom: 18px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    align-items: center;
+}
+.file_sys_menu_button{
+    width: 254px;
+    height: 60px;
+    background-color: #363B64;
+    border-radius: 20px;
+    color: white;
+    font-size: 18px;
+}
+.file_sys_menu_label{
+    width: 254px;
+    height: 60px;
+    font-size: 18px;
+    color: #A098AE;
+    display: flex;
+    align-items: end;
+}
+.file_sys_menu_item{
+    width: 254px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+}
+.file_sys_menu_icon{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.file_sys_menu_icon>img{
+    width: 40px;
+    height: 40px;
+}
+
+.file_sys_panel{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.file_sys_search_bar{
+    height: 46px;
+    width: 100%;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 34px;
+}
+.file_sys_list_body{
+    width: 100%;
+    flex-grow: 1;
+    background-color: white;
+    border-radius: 20px;
+    margin-bottom: 18px;
+    box-sizing: border-box;
+}
+
+@media (max-width: 767px){
+}
+
+@media (min-width: 768px) and (max-width: 969px){
+}
+
+@media (min-width: 970px) and (max-width: 1169px){
+}
+
+@media (min-width: 1170px){
 }
