--- a/sources/templates/common/side_bar.html
+++ b/sources/templates/common/side_bar.html
@@ -3,15 +3,13 @@
         <img src="/sources?filename=icons/logo.png" class="side_bar_logo_img">
     </div>
     <dd class="side_bar_list">
-        {% for side_bar_item in side_bar_items %}
-            <dl class="side_bar_row">
-                <div class="side_bar_item">
-                    <div class="side_bar_icon">
-                        {{side_bar_item.icon|safe}}
-                    </div>
-                    <a class="side_bar_text">{{side_bar_item.title}}</a>
+        <dl class="side_bar_row">
+            <div class="side_bar_item">
+                <div class="side_bar_icon">
+                    <img src="/sources?filename=icons/open_folder_gray.png">
                 </div>
-            </dl>
-        {% endfor %}
+                <a class="side_bar_text">文件管理器</a>
+            </div>
+        </dl>
     </dd>
 </div>
