--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -21,11 +21,29 @@
                 <div class="file_sys_menu_icon">
                     <img src="/sources?filename=icons/all_file.png">
                 </div>
+                <a class="file_sys_menu_text">所有文件</a>
             </div>
         </div>
         <div class="file_sys_panel">
             <div class="file_sys_search_bar"></div>
-            <div class="file_sys_list_body"></div>
+            <div class="file_sys_list_body">
+                <div class="file_list_title">最近使用的文件</div>
+                <div class="file_table_header">
+                    <a class="file_table_header_text">文件名</a>
+                    <a class="file_table_header_text">修改日期</a>
+                    <a class="file_table_header_text">类型</a>
+                    <a class="file_table_header_text">大小</a>
+                </div>
+                <div class="file_table_body">
+                    <div class="file_table_item"></div>
+                </div>
+                <div class="file_page_bar">
+                    <div class="file_page_info"></div>
+                    <div class="file_page_icon"></div>
+                    <div class="file_page_num"></div>
+                    <div class="file_page_icon"></div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
