--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -25,9 +25,17 @@
             </div>
         </div>
         <div class="file_sys_panel">
-            <div class="file_sys_search_bar"></div>
+            <div class="file_sys_search_bar">
+                <div class="file_path_bar"></div>
+                <div class="file_search_bar">
+                    <img src="/sources?filename=icons/magnifier.png" class="file_search_icon">
+                    <input placeholder="输入文本搜索" class="file_search_input">
+                </div>
+            </div>
             <div class="file_sys_list_body">
-                <div class="file_list_title">最近使用的文件</div>
+                <div class="file_list_title hidden">
+                    <span>最近使用的文件</span>
+                </div>
                 <div class="file_table_header">
                     <a class="file_table_header_text">文件名</a>
                     <a class="file_table_header_text">修改日期</a>
