--- a/sources/templates/common/web_base.html
+++ b/sources/templates/common/web_base.html
@@ -2,11 +2,12 @@
 <html lang="ch">
 <head>
     <meta charset="UTF-8"/>
+    <title>六号盒子</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/styles.css')}}"/>
+    <link rel="web icon" href="/sources?filename=icons/favicon.ico">
 </head>
-<body class="background_body">
+<body class="{{body_class}}">
 
 {% block body_content %}
 <!-- 主体内容 -->
