--- a/sources/templates/common/side_bar.html
+++ b/sources/templates/common/side_bar.html
@@ -4,7 +4,7 @@
     </div>
     <dd class="side_bar_list">
         <dl class="side_bar_row">
-            <div class="side_bar_item">
+            <div class="side_bar_item clickable" id="side_bar_file_sys">
                 <div class="side_bar_icon">
                     <img src="/sources?filename=icons/open_folder_gray.png">
                 </div>
