--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -42,8 +42,7 @@
                     <a class="file_table_header_text">类型</a>
                     <a class="file_table_header_text">大小</a>
                 </div>
-                <div class="file_table_body">
-                    <div class="file_table_item"></div>
+                <div class="file_table_body" id="file_table_body">
                 </div>
                 <div class="file_page_bar">
                     <div class="file_page_info"></div>
