--- a/sources/templates/home.html
+++ b/sources/templates/home.html
@@ -2,4 +2,5 @@
 {% block body_content %}
     {% include 'common/side_bar.html' %}
     {% include 'file_system/file_system.html' %}
+    {% include 'common/error_message.html' %}
 {% endblock %}
