--- a/sources/templates/common/side_bar.html
+++ b/sources/templates/common/side_bar.html
@@ -1,4 +1,4 @@
-<div class="side_bar_container">
+<div class="side_bar_container" id="side_bar_container">
     <div class="side_bar_logo">
         <img src="/sources?filename=icons/logo.png" class="side_bar_logo_img">
     </div>
