--- a/sources/templates/file_system/file_system.html
+++ b/sources/templates/file_system/file_system.html
@@ -1,6 +1,9 @@
 <div class="file_sys_container">
     <div class="file_sys_header">
-        <a class="file_sys_header_title">文件管理器</a>
+        <div class="file_sys_side_button" id="file_sys_side_button">
+            <img class="file_sys_side_icon" src="sources?filename=icons/menu.png">
+        </div>
+        <div class="file_sys_header_title">文件管理器</div>
         <div class="file_sys_header_icon">
             <img src="/sources?filename=icons/notification.png">
         </div>
@@ -37,10 +40,11 @@
                     <span>最近使用的文件</span>
                 </div>
                 <div class="file_table_header">
-                    <a class="file_table_header_text">文件名</a>
-                    <a class="file_table_header_text">修改日期</a>
-                    <a class="file_table_header_text">类型</a>
-                    <a class="file_table_header_text">大小</a>
+                    <div class="file_table_header_text">文件名</div>
+                    <div class="file_table_header_text">修改日期</div>
+                    <div class="file_table_header_text">类型</div>
+                    <div class="file_table_header_text">大小</div>
+                    <div class="file_table_header_text">操作</div>
                 </div>
                 <div class="file_table_body" id="file_table_body">
                 </div>
